# Deckompiler

./: .gitignore  Cargo.toml  LICENSE.md  README.md  game extraction.txt  main.py  names.json
.github/workflows/: debug.yml  release.yml
deckompiler/: __main__.py  clistuff.py  tickflow.py
python/: README.md  setup.py
python/deckompiler/: tickflow.py
src/: btks.rs  c00.rs  common.rs  lib.rs  main.rs
src/c00/: constants.rs  mod.rs  operations.rs  string.rs
src/compiler/: commands.rs  mod.rs
