[package]
name = "deckompiler"
description = "Tool for Tickompiler formats"
version = "0.2.1"
edition = "2021"
default-run = "deckompiler"
license-file = "LICENSE.md"

[dependencies]
bytestream = "0.4"
clap = { version = "4.0", features = ["derive"] }
tickflow-parse = { git = "https://github.com/patataofcourse/tickflow-rs", branch = "compiler" }

[[bin]]
name = "c00"

[[bin]]
name = "not_tickompiler"
